--- a/pages/infoList/infoList.wxml
+++ b/pages/infoList/infoList.wxml
@@ -1,22 +1,34 @@
 <view class="page">
   <view style="width:100vw;height:5vw"></view>
-  
+
   <!-- 选择器 -->
   <view class="selector card">
-    <picker bindchange="bindPickerChange" value="{{index}}" range="{{major}}">
-    <view class="picker">
-      {{index==0?'点击切换专业':'当前选择:'+major[index]}}
-    </view>
-  </picker>
+    <picker bindchange="bindPickerChange" value="{{index}}" range="{{type=='students'?major:area}}">
+      <view class="picker">
+        {{index==0?'点击切换选择':'当前选择:'+type=='students'?major[index]:area[index]}}
+      </view>
+    </picker>
   </view>
 
   <!-- 信息列表 -->
-  <view>
-    <!-- 卡片循环 -->
-    <block wx:for="{{users}}">
-      <info_card img="{{item.userPhoto}}" title="标题" price="{{item.major}}" type="类型" isShowDelete="{{true}}"> </info_card>
-    </block>
+  <view class="list">
 
+    <!-- 卡片 -->
+
+
+    <!-- 学生信息展示 -->
+    <view wx:if="{{type=='students'}}">
+      <block wx:for="{{users}}">
+        <wux-wing-blank size="default">
+        <wux-card title="{{item.nickName}}" extra="{{item.major}}" thumb="{{item.userPhoto}}">
+          <view slot="body">{{item.introduction}}</view>
+          <view slot="footer">联系方式: {{item.phone}}</view>
+        </wux-card>
+      </wux-wing-blank>
+    </block>
+    </view>
+
+    <!-- 地区信息 -->
 
   </view>
 
