--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -14,8 +14,8 @@
 
   <view class="index-list" scroll-y="{{true}}" bindscrolltolower="xiala">
 
-    <block wx:for="{{acticle_list}}" catchtap="go">
-      <title_card img='{{item.image_src}}' title='{{item.title}}' isShowBtns='{{true}}' isLiked='{{item.liked}}'
+    <block wx:for="{{acticle_list}}" >
+      <title_card img='{{item.image_src}}' catchtap="go" title='{{item.title}}' isShowBtns='{{true}}' isLiked='{{item.liked}}'
         bind:like='handleLike' isShowLike="{{true}}" id="{{index}}" >
       </title_card>
     </block>
